# nycu-self-driving-car

./: .gitignore  README.md  mid_1.rviz  mid_2.rviz  mid_3.rviz  plot_traj.py
HW3/: README.md  sdc_hw3.rviz
HW3/ros1_noetic_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
HW3/ros1_noetic_ws/devel/lib/pkgconfig/: kitti.pc  robot_localization.pc
HW3/ros1_noetic_ws/devel/lib/robot_localization/: ekf_localization_node  navsat_transform_node  robot_localization_listener_node  test_ros_robot_localization_listener_publisher  ukf_localization_node
HW3/ros1_noetic_ws/devel/share/gennodejs/ros/robot_localization/srv/: _index.js
HW3/ros1_noetic_ws/devel/share/kitti/cmake/: kittiConfig.cmake
HW3/ros1_noetic_ws/devel/share/robot_localization/cmake/: robot_localizationConfig.cmake
HW3/ros1_noetic_ws/devel/share/roseus/ros/robot_localization/: manifest.l
HW3/ros1_noetic_ws/src/robot_localization/launch/: ekf_template.launch  ukf_template.launch
HW3/ros1_noetic_ws/src/robot_localization/params/: ekf_template.yaml  ukf_template.yaml
HW4/: 310512054_hw4.docx
HW4/sdc_hw4_bags/: pcd_read.cpp
HW4/sdc_hw4_bags/sdc_hw4/: metadata.yaml
HW4/src/hw4/: CMakeLists.txt  package.xml
HW4/src/hw4/launch/: icp_localization.launch
HW4/src/hw4/src/: downsample.cpp  icp_localization.cpp
HW5/: Notice.md
HW5/src/argo_tracking/: CMakeLists.txt  package.xml
HW5/src/argo_tracking/launch/: viz_track_result.launch  viz_track_result_val.launch
HW5/src/argo_tracking/rviz_config/: tracking_result_viz.rviz
HW5/src/argo_tracking/src/: class.cpp  viz_track_result.cpp
HW5/src/argo_tracking/src/python_version/: plot_traj.py  processing_utils.py  publish_utils.py  viz_photo.py
Mid_term_project/: ICP_localization_1.cpp  Q1result.csv  Q2result.csv  Q3result.csv
Mid_term_project/src/icp/: CMakeLists.txt  Readme.md  package.xml
Mid_term_project/src/icp/config/: mid_1.rviz  mid_2.rviz  mid_3.rviz
Mid_term_project/src/icp/launch/: ICP_localization_1.launch  ICP_localization_2.launch  ICP_localization_3.launch
Mid_term_project/src/icp/results/: results_1.csv
Mid_term_project/src/icp/src/: ICP_localization_1.cpp  ICP_localization_2.cpp  ICP_localization_3.cpp  NDT_localization_3.cpp  downsample.cpp  icp_localize.cpp  icp_locolization.cpp  icp_locolization1.cpp  icp_locolization2.cpp  pcl_load.cpp  record_odom.cpp
